--- a/main.scss
+++ b/main.scss
@@ -367,6 +367,46 @@ arttags {
     margin: 0 0.5em 0 0;
   }
 }
+// Chat
+.chat {
+  max-width: 90%;
+  width: 1000px;
+  display: flex;
+  margin: 0 0 2em 0;
+  input, button {
+    height: 3em;
+    padding: 0 1em;
+    font-size: 1em;
+    border: 2px solid #444;
+    outline: none;
+    box-sizing: border-box;
+  }
+  input {
+      flex: 1;
+      min-width: 200px;
+      border-right: none;
+      border-top-left-radius: 10px;
+      border-bottom-left-radius: 10px;
+      appearance: none;
+  }
+  button {
+      cursor: pointer;
+      background: #444;
+      color: white;
+      border-left: none;
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
+      transition: 0.3s;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+  }
+  button:hover {
+      background: #666;
+  }
+}
+
+
 // Search
 .info-cockt {
   display: flex;
